<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtShowId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_toRightOf="@+id/imgIcon"
                android:text="@string/txtNum"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtId"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtShowId"
                android:gravity="bottom|left"
                android:text="ID"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_toRightOf="@+id/txtId"
                android:gravity="center|left"
                android:textSize="16sp"
                android:text="@string/txtItem"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_below="@id/txtName"
                android:layout_toRightOf="@+id/txtId"
                android:gravity="center|left"
                android:textSize="16sp"
                android:text="@string/txtPrice"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_toRightOf="@+id/txtId"
                android:gravity="center|left"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_below="@id/txtName"
                android:layout_toRightOf="@+id/txtId"
                android:gravity="center|left"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>